--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="button3_string">Turn the lights red</string>
     <string name="url_hint">Enter URL</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="title_activity_destination_screen">DestinationScreen</string>
 
 </resources>
