--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">Splash</string>
-    <string name="title_string">Welcome to our app!</string>
+    <string name="title_string">Welcome to the Map App</string>
     <string name="button1_string">Turn the lights blue</string>
     <string name="button2_string">Turn the lights green</string>
     <string name="button3_string">Turn the lights red</string>
