--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">Splash</string>
-    <string name="title_string">Welcome to the Map App</string>
+    <string name="title_string">Treasure Hunt</string>
     <string name="button1_string">Turn the lights blue</string>
     <string name="button2_string">Turn the lights green</string>
     <string name="button3_string">Turn the lights red</string>
@@ -13,4 +13,20 @@
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_destination_screen">DestinationScreen</string>
 
+    <!-- Strings used in app ui-->
+
+    <string name="hello">Hello, </string>
+    <string name="login_instructions">Login to twitter</string>
+    <string name="share_instructions">Enter share message</string>
+    <string name="btn_login">Login to Twitter</string>
+    <string name="btn_share">Share</string>
+
+    <!-- Twitter Configurations -->
+    <string name="twitter_callback">http://plato.cs.virginia.edu/~tn3qd/ms4/</string>
+    <string name="twitter_consumer_key">zmVuMiSlcu7vVBd9AKAg71gS6</string>
+    <string name="twitter_consumer_secret">j8ZgPTXR4cqyCtkrMnO98Z0ktJbcoCRBV6Jiqj3Hlqxey4ylza</string>
+    <string name="access_token">1543364802-lmIUBckosDTVlYfNxy6FEOPWuyEnx84IpQi9D4U</string>
+    <string name="access_token_secret">N2nO6KzCW9pVJTEyCBJUOiZ1PC7ksuMJ3A8XgjsvkHfJN</string>
+    <string name="twitter_oauth_verifier">oauth_verifier</string>
+    <!-- End Configurations -->
 </resources>
